crates/hed_core/tests/snapshots/ip_hosts__ipv4.snap
---
source: crates/hed_core/tests/ip_hosts.rs
expression: "s.parse::<IpHosts>().unwrap()"
---
IpHosts {
    ip: "172.16.254.1",
    hosts: {
        "a.com",
        "b.com",
    },
}
