crates/hed_core/tests/snapshots/ip_hosts__ipv6.snap
---
source: crates/hed_core/tests/ip_hosts.rs
expression: "s.parse::<IpHosts>().unwrap()"
---
IpHosts {
    ip: "2402:1200:4f00:1234:0000:5678:9abc:def0",
    hosts: {
        "a.com",
        "b.com",
    },
}
